# AIDataPipeline

./: CLAUDE.md  LICENSE  README.md  push-to-github.sh  pyproject.toml
.github/workflows/: ci.yaml
db/: alembic.ini  alembic_metadata.ini
db/alembic/: env.py
db/alembic_metadata/: env.py
docs/: ai-data-pipeline-design.md  ai-data-pipeline-error-handling.md  ai-data-pipeline-multitenancy.md  ai-data-pipeline-operators.md  ai-data-pipeline-security.md  ai-data-pipeline-ui.md  execution-progress.json  implementation-plan.md  metadata-lineage.md  sdk-execution-progress.json  sdk-implementation-plan.md  sdk-sessions.json  sessions.json  test-plan.md
docs/api/: bff-api.openapi.yaml  pipeline-operator-crds.yaml  quota-service.proto  rag-api.openapi.yaml
docs/diagrams/: architecture.md  sequence-diagrams.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  keycloak.ts  main.tsx
k8s/base/: kind-config.yaml  namespaces.yaml  network-policies.yaml
k8s/operators/: argocd-application.yaml  argocd-applicationset.yaml  argocd-image-updater-credentials.yaml  argocd-image-updater-values.yaml  (+14 more)
reports/: kube-bench-summary.txt  kubescape-summary.txt  load-test-summary.txt
scripts/: auto-execute.sh  bootstrap-cluster.sh  bootstrap-operators.sh  promote-to-production.sh  run-security-scans.sh  sdk-auto-execute.sh  setup-keycloak-realm.sh  smoke_test.py  smoke_test_bff.py  status.sh  watchdog.sh
sdk/python/: pyproject.toml
sdk/python/ai_pipeline_sdk/: __init__.py  client.py  models.py  rag.py
(+214 files in other folders)
