[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-pipeline-sdk"
version = "0.1.0"
description = "Python SDK for the AI Data Pipeline"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.2.0"]
llamaindex = ["llama-index-core>=0.10.0"]
haystack = ["haystack-ai>=2.0.0"]
all = [
    "langchain-core>=0.2.0",
    "llama-index-core>=0.10.0",
    "haystack-ai>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/ai-pipeline/sdk"
Repository = "https://github.com/ai-pipeline/sdk"

[project.classifiers]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
]
